[project]
name = "echo_server_logic"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
authors = [
    { name = "Glauco Pater", email = "glauco.pater@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.62.0,<1.63.0",
    "grpcio-tools>=1.62.0,<1.63.0",
    "protobuf>=4.25.3,<5.0.0",
    "grpcio-reflection>=1.62.0,<1.63.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "aiohttp",
]

[project.scripts]
server = "server:main"

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
